static/style.css
:root {
  /* THEMES */

  /* Mint */
  /*
  --border: #656565;
  --bg: #808782;
  --bar: #A6D3A0;
  --main: #D1FFD7;
  */

  /* Boyscout */
  /*
  --bg: #81B29A;
  --bar: #F2CC8F;
  --border: #3D405B;
  --button: #E07A5F;
  --main: #F4F1DE;
  */

  /* Jeans */
  /*
  --border: #576166;
  --bg: #918271;
  --bar: #7B99A8;
  --main: #E5DDD3;
  */

  /* Olive */
  /*
  --border: #342A21;
  --bg: #C9B79C;
  --bar: #71816D;
  --main: #F1E0C5;
  */

  /* Coffee */
  --border: #000000;
  --bg: #BAA898;
  --main: #EEE0CB;
  --bar: #839788;
  --danger: #E07A5F;
}

html {
  font-family: Arial, sans-serif;
  background-color: var(--bg);
}

body {
  padding: 10px;
  padding: 10px 5vw;
}

main {
  padding: 30px 25px;
  background-color: var(--main);
  border: 3px solid var(--border);
  border-radius: 12px;
  margin-top: 20px;
  margin-bottom: 0px;
}

h2 {
  margin-top: 20px;
  margin-bottom: 6px;
}

.please_wait {
  font-size: 1.4rem;
  background-color: #5555558F;
  color: white;
  font-weight: bold;
  display: none;
  width: 100%;
  height: 100%;
  align-items: center;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1000;
  text-shadow: /* text outline */
    -2px -2px 0 #000,
    2px -2px 0 #000,
    -2px 2px 0 #000,
    2px 2px 0 #000,
    -3px 0px 0 #000,
    3px 0px 0 #000,
    0px -3px 0 #000,
    0px 3px 0 #000;
}

table {
  border-collapse: collapse;
  margin-top: 20px;
  background-color: white;
  /*border-radius: 20px;*/
  overflow: hidden;
  width: 100%;
}

th, td {
  border: 3px solid var(--border);
  padding: 8px 12px;
  text-align: left;
}

th {
  background-color: var(--bar);
}

/*
  NOTE: Buttons must be placed inside a flexbox (Eg. <div class="flex-row">).
  Otherwise, they move the rest of the page when hovered.
*/
button {
  padding: 12px 24px;
  margin-bottom: 6px;
  border-radius: 10px;
  background-color: var(--bar);
  color: var(--border);
  border: 3px solid var(--border);
  box-shadow: 0 6px 0 var(--border);
  font-size: 1rem;
  font-weight: bold;
  width: max-content;
  min-width: 130px;
  align-self: center;
}

button:hover {
  cursor:pointer;
  box-shadow: 0 0;
  margin-top: 6px;
  margin-bottom: 0;
}

i {
  margin-left: -2px;
  margin-right: 8px;
}

select {
  padding: 12px;
  border-radius: 10px;
  background-color: #fff;
  color: var(--border);
  border: 3px solid var(--border);
  font-size: 1rem;
  font-weight: bold;
  flex-grow: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  cursor: pointer;
}

select,
::picker(select) {
  appearance: base-select;
}

select::picker-icon {
  color: var(--border);
}


.player_select, .deck_select {
  max-width: 200px;
}

.selector-with-icon {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

form {
  display: flex;
  flex-direction: column;
  margin-top: -10px;
  margin-bottom: 10px;
}

input {
  padding: 10px;
  border: 3px solid var(--border);
  border-radius: 8px;
  background-color: var(--main);
  flex-grow: 1;
  font-size: 1.2em;
  margin-bottom: 10px;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
  appearance: textfield;
}

.bubble {
  padding: 10px;
  border: 3px solid var(--border);
  border-radius: 8px;
  background-color: var(--main);
  flex-grow: 1;
  font-size: 1.2em;
  margin-bottom: 10px;
}

#decks_page_list {
  height: 100%;
  padding-right: 20px;
  overflow: scroll;
  flex-grow: 1;
}

#decks_page {
  height: calc(100vh - 200px);
  display: flex;;
}

#deck_details {
  width: 650px;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
  border: 3px solid var(--border);
  border-radius: 8px;
  background-color: var(--main);
  font-size: 1em;
  margin-bottom: 10px;
  overflow: scroll;
}

#back_to_list_button {display: none;}

#game_id_display {
  font-size: 1.1em;
  width: 50px;
}

#deck_image {
  display: none; 
  /*
  position: absolute;
  left: 50%;
  transform: translate(130px, -120px);
  max-width: 120px;
  */ 
  margin: 20px;
  max-width: 260px; 
  height: auto; 
  border-radius: 10px;
  align-self: center;
}

/* 
.block {
  display: flex;
  flex-direction: column;
  width: 500px;
  margin: 20px;
  padding: 20px;
  background-color: #fff;
  border: 3px solid var(--border);
  border-radius: 12px;
  box-shadow: 0 16px 0 var(--border);
} */

.site-header {
  display: flex;
  justify-content: space-between;
  background-color: var(--bar);
  color: #000;
  padding: 0 30px;
  border-radius: 12px;
  border: 3px solid var(--border);
  min-height:30px;
}

.top-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-grow: 1;
  min-height: 60px;
}

.top-nav .logo {
  color: var(--border);
  text-decoration: none;
  font-weight: bold;
  font-size: 1.3rem;
}

.nav-list {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  align-items: center;
  min-height: 40px;
}

.nav-list a {
  color: var(--border);
  text-decoration: none;
  font-weight: bold;
  font-size: 1.1em;
  padding: 12px 20px;
  border-radius: 8px;
}

.nav-list a:hover {
  background: var(--border);
  color: #fff;
}

#games_list {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin-top: 20px;
  gap: 1em;
}

#view_game_page {
  display: flex;
  justify-content: center;
}

#view_game_block {
  max-width: 600px;
  width: 100%;
}

#remove-loser, #add-loser {
  flex-grow: 1;
}

#cancel_new_game {
  background-color: #bbb;
}

.flex-row {
  display: flex;
  justify-content: center;
  gap: 10px;
  align-items: top;
  flex-wrap: wrap;
}

.flex-col {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  background: #fff;
  border: 3px solid var(--border);
  border-radius: 12px;
  padding: 0;
  margin-bottom: 12px;
  /*box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);*/
  box-shadow: 0 12px 0 var(--border);
  /* flex-grow: 1; */
  /* max-width: 400px; */
  width: 400px;
}

.card_header {
  display: flex;
  justify-content: space-between;
  padding: 14px 20px 14px 20px;
  background-color: var(--border);
  color: #fff;
}

.card_body {
  display: flex;
  flex-direction: column;
  gap: 20px;
  padding: 20px;
}

.card_body img {
  max-width: 50%;
  height: fit-content;
  border-radius: 8px;
}

.record_details {
  max-width: 40%;
}

.card_footer {
  padding: 20px;
  background-color: var(--bar);
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.deck_with_elo {
  display: flex;
  justify-content: space-between;
  margin-top: 6px;
}

.no-margin {
  margin: 0;
}

/*
.elo_change {
  font-weight: bold;
  color: var(--bar);
}
*/

#random_games_container, #elo_records_container {
  display: flex;
  justify-content: center;
  margin: 30px 0;
  gap: 20px;
}

.modal {
  display: none;
  position: fixed;
  overflow: scroll;
  overflow-y: auto;
  height: 90vh;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

fieldset {
  border: 1px solid #ccc;
  border-radius: 8px;
  padding: 1rem;
}

.player-deck-row {
  display: flex;
  flex-direction: column;
  border: 3px solid var(--border);
  border-radius: 8px;
  padding: 22px;
  background-color: var(--main);
  box-shadow: 0 6px 0 var(--border);
  flex-grow: 1;
  gap: 20px;
  margin-bottom: 20px;
}

.select-label {
  margin-left: 20px;
}

textarea {
  flex-grow: 1;
  height: 100px;
  padding: 16px;
  border: 3px solid var(--border);
  border-radius: 8px;
  resize: none;
  margin: 6px 0 30px 0;
  font-size: 1.2em;
}

.danger {
  background-color: var(--danger);
  color: white;
}

/* small screens */
@media (max-width: 800px) {
  .site-header {margin: 20px 20px 0 20px;}
  .top-nav {
    flex-direction: column;
    gap: 6px;
    padding: 22px 0 10px 0;
  }
  .nav-list {
    justify-content: space-between;
  }
  .card {
    width: auto;
    max-width: 400px;
  }
  body {
    margin: 0 0 0 0;
    padding: 0;
  }
  #random_games_container, #elo_records_container {
    flex-direction: column; 
    align-items: center; 
    gap: 26px;
  }
  main {border: 0;}
  button {flex-grow: 1;}
  .site-footer {padding-left: 20px;}
  .top-nav .logo {font-size: 1.6em;}
  #decks_page_list {height: calc(100vh - 200px);}
  #deck_details {
    display: none;
    padding: 0;
    border: none;
  }
  #back_to_list_button {
    display: block;
    width: 100%;
  }
}

